# Chaintrap

./: .gitignore  CHANGELOG.md  README.md  chaintrap_dashboard.html  demo_ransomware.py  launcher.py  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
api/: __init__.py  dashboard.py
config/: config.py
core/: __init__.py  blockchain_logger.py  canary_server.py  decoy_manager.py  entropy_analyzer.py  event_logger.py  monitor.py  platform_ops.py
demo_target/: AIIMS_Patient_Records_2024.locked  CERT-In_Incident_Report_Q4.locked  MoH_Budget_Allocation_2026.xlsx  NIC_Infrastructure_Audit.xlsx  Server_Access_Credentials.txt  accounts_payable_Dec.csv  accounts_payable_Feb.csv  accounts_payable_May.xlsx  acquisition_docs_2024.docx  annual_report_2022.csv  annual_report_2025.txt  birth_certificate.docx  board_minutes_Sep_2024.docx  board_minutes_Sep_2025.txt  budget_2023_final.csv  confidential_report_1_2023.txt  employee_data_2020.xlsx  insurance_policy_2021.txt  insurance_policy_2024.docx  invoice_2020_1361.xlsx  invoice_2024_3535.csv  ip_portfolio_2021.txt  legal_documents_8442.docx  meeting_notes_Apr_2024.txt  meeting_notes_Jul_2021.docx  passport_scan_2020.txt  passwords_9286.docx  payroll_Apr_2020.csv  project_proposal_2785.txt  salary_slip_Jul.txt  social_security_6823.docx  social_security_8711.docx  strategy_2021_q4.docx  strategy_2023_q4.txt  tax_return_2022.xlsx
eval/: __init__.py  benchmark.py  threat_sim.py
tests/: conftest.py  test_blockchain_logger.py  test_dashboard_and_benchmark.py  test_decoy_and_canary.py  test_entropy_analyzer.py  test_integration.py  test_part2.py  test_part3.py
